# atlassian_sdk

./: README.md
.github/workflows/: ci-node.yml  ci-python.yml  release-all.yml  release-node.yml  release-python.yml
node/: .env.example  CLAUDE.md  README.md  package-lock.json  package.json  tsconfig.json  tsup.config.ts
node/.claude/: settings.json  tools.md
node/.claude/agents/: lib-builder.md  mcp-builder.md
node/.claude/rules/: data-layer.md  error-handling.md  imports.md  naming.md  typing.md  workflow.md
node/.claude/skills/: build.md  e2e.md  lint.md  test.md
node/src/: auth.ts  errors.ts  http.ts  index.ts
node/src/confluence/: client.ts  (+3 more)
node/tests/: auth.test.ts  errors.test.ts  http.test.ts
python/: .env.example  CLAUDE.md  README.md  pyproject.toml
python/.claude/: settings.json  tools.md
python/.claude/agents/: lib-builder.md  mcp-builder.md
python/.claude/rules/: data-layer.md  error-handling.md  imports.md  naming.md  typing.md  workflow.md
python/.claude/skills/: build.md  e2e.md  lint.md  test.md
python/src/atlassian_sdk/: __init__.py  auth.py  exceptions.py  http.py
python/src/atlassian_sdk/confluence/: __init__.py  client.py  models.py  schemas.py
python/src/atlassian_sdk/jira/: __init__.py  client.py  models.py  schemas.py
python/src/atlassian_sdk/mcp/: __init__.py  server.py
python/tests/: test_auth.py  test_exceptions.py  test_http.py
python/tests/confluence/: test_client.py  test_models.py  test_schemas.py
python/tests/jira/: test_client.py  test_models.py  test_schemas.py
python/tests/mcp/: test_server.py
(+13 files in other folders)
