[project]
name = "atlassian-sdk-py"
version = "0.0.0"
description = "Python async SDK for Atlassian REST API (Jira + Confluence)"
authors = [
    {name = "kknaks"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "pydantic>=2.0,<3.0",
    "httpx>=0.27,<1.0",
    "mcp>=1.0,<2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=1.3",
    "respx>=0.22",
]

[project.scripts]
atlassian-sdk-mcp = "atlassian_sdk.mcp:run"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{include = "atlassian_sdk", from = "src"}]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest (>=9.0.0,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "respx (>=0.22.0,<1.0.0)",
]
